--- a/now.json
+++ b/now.json
@@ -5,8 +5,8 @@
   "routes": [
     {
       "src": "/(.*)",
-      "status": 307,
-      "headers": { "Location": "https://fldwrk.mykajabi.com/$1" }
+      "status": 301,
+      "headers": { "Location": "https://www.fldwrk.io/$1" }
     }
   ]
 }
